removes css for icons in footer, due to spacing issues

--- a/resources/style.css
+++ b/resources/style.css
@@ -106,6 +106,7 @@ body {
 
 /*Footer code:*/
 .footer {
+    color: #1D4706;
     background-color: bisque;
     display: flex;
     justify-content: center;
@@ -117,30 +118,25 @@ body {
 }
 
 .footer-child {
+    color: #1D4706;
     margin-top: 2rem;
 }
 
 .footer-child ul {
     list-style-type: none;
     list-style: none;
+    color: #1D4706;
+}
 
+.footer-child a {
+    color: #1D4706;
+    text-decoration: underline;
 }
 
 .footer-child-2 {
-    margin-top: 2rem;
-}
-
-/* Facebook */
-.fa-facebook {
-    width: 5rem;
-    margin: 1.5rem;
-}
-
-/* Instagram */
-
-.fa-instagram {
-    width: 5rem;
-    margin: 1.5rem;
+    color: #1D4706;
+    margin: 2rem;
+    text-decoration: none;
 }
 /*End of body CSS*/
 
